Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61980

Hotspot not set in QML Drag

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.9.2
    • 5.8.0, 5.9.1
    • None

    Description

      The QML Drag component doesn't set the hotspot when starting a drag.

      Fix: set the hotspot in qquickdrag.cpp (in startDrag(), line 760) :

      drag->setHotSpot(hotSpot.toPoint());
      

      I tested it under Qt 5.9.1 / macOS 10.12, and should affect all versions and OS.

      Attachments

        1. drag.png
          drag.png
          12 kB
        2. drag-current.gif
          drag-current.gif
          317 kB
        3. drag-expected.gif
          drag-expected.gif
          246 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            wearyinside Oleg Yadrov
            bbenj Balga Benjamin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes