QQuickDragAttached: make hotSpot work with imageSource

This amends patch 4b982c744f538a24e21a2af146c45f93d27dd1cb.

Previously, setting hotSpot had no effect on the image position because
QDrag object used for the drag is created in startDrag(), and the
hotspot was never updated before drag->exec(...).

Task-number: QTBUG-61980
Change-Id: I9c11c456d3b32b5986cf287b2610437e3825d9d9
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>